--- a/adaptive_app/step_06/android/app/src/main/AndroidManifest.xml
+++ b/adaptive_app/step_06/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.adaptive_app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="adaptive_app"
         android:name="${applicationName}"
