--- a/animated-responsive-layout/codelab_rebuild.yaml
+++ b/animated-responsive-layout/codelab_rebuild.yaml
@@ -287,7 +287,7 @@ steps:
           import '../models/data.dart' as data;
           import '../models/models.dart';
           import 'email_widget.dart';
-          import 'search_bar.dart';
+          import 'search_bar.dart' as search_bar;
           
           class EmailListView extends StatelessWidget {
             const EmailListView({
@@ -308,7 +308,7 @@ steps:
                 child: ListView(
                   children: [
                     const SizedBox(height: 8),
-                    SearchBar(currentUser: currentUser),
+                    search_bar.SearchBar(currentUser: currentUser),
                     const SizedBox(height: 8),
                     ...List.generate(
                       data.emails.length,
