--- a/animated-responsive-layout/step_07/android/app/src/main/AndroidManifest.xml
+++ b/animated-responsive-layout/step_07/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.animated_responsive_layout">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="animated_responsive_layout"
         android:name="${applicationName}"
