--- a/flame-building-doodle-dash/step_05/android/app/src/main/AndroidManifest.xml
+++ b/flame-building-doodle-dash/step_05/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.doodle_dash">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="doodle_dash"
         android:name="${applicationName}"
