--- a/adaptive_app/step_06/yt_cors_proxy/pubspec.yaml
+++ b/adaptive_app/step_06/yt_cors_proxy/pubspec.yaml
@@ -3,7 +3,7 @@ description: A YouTube CORS Proxy Server.
 version: 1.0.0
 
 environment:
-  sdk: '>=2.19.4 <4.0.0'
+  sdk: ^3.0.0-417.2.beta
 
 dependencies:
   http: ^0.13.5
