--- a/adaptive_app/step_07/pubspec.yaml
+++ b/adaptive_app/step_07/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.4 <4.0.0'
+  sdk: '>=3.0.0-417.2.beta <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,15 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  googleapis: ^10.1.0
+  googleapis: ^11.0.0
   http: ^0.13.5
   provider: ^6.0.5
   url_launcher: ^6.1.10
-  flex_color_scheme: ^7.0.1
-  go_router: ^6.5.5
+  flex_color_scheme: ^7.0.4
+  go_router: ^6.5.8
   split_view: ^3.2.1
   googleapis_auth: ^1.4.0
-  google_sign_in: ^6.0.2
+  google_sign_in: ^6.1.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.9
 
 dev_dependencies:
