--- a/dart3/step_01/android/app/build.gradle
+++ b/dart3/step_01/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace "com.example.dart3"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
