--- a/dart3/step_01/android/app/src/main/AndroidManifest.xml
+++ b/dart3/step_01/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dart3">
-   <application
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
         android:label="dart3"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
