--- a/dart3/codelab_rebuild.yaml
+++ b/dart3/codelab_rebuild.yaml
@@ -76,25 +76,15 @@ steps:
           }
       - name: Update pubspec.yaml
         path: dart3/pubspec.yaml
-        replace-contents: |
-          name: dart3
-          description: A new Flutter project.
-          publish_to: 'none'
-          version: 1.0.0
-          environment:
-            sdk: '>=3.0.0-0 <4.0.0'
-          dependencies:
-            flutter:
-              sdk: flutter
-            cupertino_icons: ^1.0.2
-          dev_dependencies:
-            flutter_test:
-              sdk: flutter
-            flutter_lints: ^2.0.0
-          flutter:
-            uses-material-design: true
-            assets:
-              - assets/data.json
+        patch-u: |
+          --- b/dart3/step_01/pubspec.yaml
+          +++ a/dart3/step_01/pubspec.yaml
+          @@ -17,3 +17,5 @@ dev_dependencies:
+           
+           flutter:
+             uses-material-design: true
+          +  assets:
+          +    - assets/data.json
       - name: Create assets/data.json
         mkdir: dart3/assets/
       - name: Add assets/data.json
