--- a/dart3/step_01/pubspec.yaml
+++ b/dart3/step_01/pubspec.yaml
@@ -1,17 +1,20 @@
 name: dart3
 description: A new Flutter project.
 publish_to: 'none'
-version: 1.0.0
+version: 0.1.0
+
 environment:
-  sdk: '>=3.0.0-0 <4.0.0'
+  sdk: '>=3.0.0-417.2.beta <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
 flutter:
   uses-material-design: true
   assets:
