Fixup `cupertino_store`

--- a/cupertino_store/codelab_rebuild.yaml
+++ b/cupertino_store/codelab_rebuild.yaml
@@ -1497,9 +1497,9 @@ steps:
           +        Row(
           +          mainAxisAlignment: MainAxisAlignment.spaceBetween,
           +          children: <Widget>[
-          +            Row(
+          +            const Row(
           +              mainAxisAlignment: MainAxisAlignment.start,
-          +              children: const <Widget>[
+          +              children: <Widget>[
           +                Icon(
           +                  CupertinoIcons.clock,
           +                  color: CupertinoColors.lightBackgroundGray,
