--- a/google-maps-in-flutter/step_5/android/app/src/main/AndroidManifest.xml
+++ b/google-maps-in-flutter/step_5/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.google_maps_in_flutter">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="google_maps_in_flutter"
         android:name="${applicationName}"
