--- a/in_app_purchases/step_08/dart-backend/pubspec.yaml
+++ b/in_app_purchases/step_08/dart-backend/pubspec.yaml
@@ -4,10 +4,10 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.19.5 <4.0.0'
+  sdk: ^3.0.0-0
 
 dependencies:
-  googleapis: ">=9.2.0 <11.0.0"
+  googleapis: ^11.0.0
   googleapis_auth: ^1.3.0
   http: ^0.13.4
   shelf: ^1.3.0
