--- a/testing_codelab/step_04/pubspec.yaml
+++ b/testing_codelab/step_04/pubspec.yaml
@@ -8,12 +8,12 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.4 <4.0.0'
+  sdk: '>=3.0.0-417.2.beta <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^6.5.5
+  go_router: ^6.5.8
   provider: ^6.0.5
 
 dev_dependencies:
@@ -24,7 +24,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  test: ^1.22.0
+  test: ^1.24.1
 
 flutter:
   uses-material-design: true
