--- a/webview_flutter/step_05/android/app/src/main/AndroidManifest.xml
+++ b/webview_flutter/step_05/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.webview_in_flutter">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="webview_in_flutter"
         android:name="${applicationName}"
