--- a/boring_to_beautiful/final/pubspec.yaml
+++ b/boring_to_beautiful/final/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 1.0.0
 
 environment:
-  sdk: ">=2.19.4 <4.0.0"
+  sdk: ^3.0.0-0
 
 dependencies:
   adaptive_breakpoints: ^0.1.6
