--- a/dart3/step_01/windows/runner/Runner.rc
+++ b/dart3/step_01/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "dart3" "\0"
+            VALUE "FileDescription", "patterns_codelab" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "dart3" "\0"
+            VALUE "InternalName", "patterns_codelab" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "dart3.exe" "\0"
-            VALUE "ProductName", "dart3" "\0"
+            VALUE "OriginalFilename", "patterns_codelab.exe" "\0"
+            VALUE "ProductName", "patterns_codelab" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
