--- a/dart3/step_01/android/app/src/main/AndroidManifest.xml
+++ b/dart3/step_01/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dart3">
-   <application
-        android:label="dart3"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <application
+        android:label="patterns_codelab"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
