--- a/dart3/step_01/macos/Runner/Configs/AppInfo.xcconfig
+++ b/dart3/step_01/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = dart3
+PRODUCT_NAME = patterns_codelab
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.dart3
+PRODUCT_BUNDLE_IDENTIFIER = com.example.patternsCodelab
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
