--- a/dart3/step_01/windows/CMakeLists.txt
+++ b/dart3/step_01/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(dart3 LANGUAGES CXX)
+project(patterns_codelab LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "dart3")
+set(BINARY_NAME "patterns_codelab")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
