Simplify sdk version constraints

--- a/dart-patterns-and-records/codelab_rebuild.yaml
+++ b/dart-patterns-and-records/codelab_rebuild.yaml
@@ -48,7 +48,7 @@ steps:
           publish_to: 'none'
           version: 1.0.0
           environment:
-            sdk: '>=3.0.0-0 <4.0.0'
+            sdk: ^3.0.0-0
           dependencies:
             flutter:
               sdk: flutter
