--- a/dart-patterns-and-records/step_06_a/analysis_options.yaml
+++ b/dart-patterns-and-records/step_06_a/analysis_options.yaml
@@ -1,1 +1,6 @@
-include: package:flutter_lints/flutter.yaml
+include: ../../analysis_options.yaml
+
+analyzer:
+  language:
+    strict-casts: false
+    strict-inference: false
